fix(ui): whole body overflow hidden

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -41,6 +41,10 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+body {
+  overflow-y: hidden;
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
